src/test/deca/syntax/valid/sansObjet/25_progvide.deca
/* Description:
    Programme vide

   Historique:
    cree le 9/01/2020
*/
