src/test/deca/syntax/invalid/circularInculde.deca
/* Description:
    tests de programme incorrect syntaxiquement

 Resultats:


 Historique:
    cree le 10/01/2020
*/

#include "circular.decah"
